# ChangeLog for kde-base/kdeaccessibility
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/Attic/ChangeLog,v 1.95 2005/12/31 13:31:39 corsair Exp $

  31 Dec 2005; Markus Rothe <corsair@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Added ~ppc64

  17 Dec 2005; Markus Rothe <corsair@gentoo.org>
  kdeaccessibility-3.5.0.ebuild:
  Added ~ppc64

  17 Dec 2005; Guy Martin <gmsoft@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Stable on hppa.

  14 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Stable on sparc wrt #112842

  14 Dec 2005; Brent Baude <ranger@gentoo.org>
  kdeaccessibility-3.4.3.ebuild:
  Marking kdeaccessibility-3.4.3 ~ppc64 for kde-3.4.3

  10 Dec 2005; Bryan Østergaard <kloeri@gentoo.org
  kdeaccessibility-3.4.3-r1.ebuild:
  Stable on alpha, bug 112842.

  10 Dec 2005; Chris White <chriswhite@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Marked x86 stable for bug #112842.

  06 Dec 2005; Joseph Jezak <josejx@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Marked ppc stable for bug #112842.

  05 Dec 2005; Zaheer Abbas Merali <zaheerm@gentoo.org>
  kdeaccessibility-3.4.1.ebuild, kdeaccessibility-3.4.2.ebuild,
  kdeaccessibility-3.4.3.ebuild, kdeaccessibility-3.4.3-r1.ebuild,
  kdeaccessibility-3.5.0.ebuild:
  Fix GStreamer dependencies

  02 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org>
  kdeaccessibility-3.4.3-r1.ebuild:
  Stable on amd64, bug 112842.

*kdeaccessibility-3.4.3-r1 (27 Nov 2005)

  27 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org>
  +files/kdeaccessibility-3.4.3-pointer.patch,
  +kdeaccessibility-3.4.3-r1.ebuild:
  Fixes glibc problems due to invalid pointers, closes bug 91004, thanks to
  Chris White <chriswhite@gentoo.org>.

  27 Nov 2005; Guy Martin <gmsoft@gentoo.org> kdeaccessibility-3.4.3.ebuild:
  Stable on hppa.

  24 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org>
  kdeaccessibility-3.4.3.ebuild: