@@ -1,11 +1,11 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/Attic/kdeaccessibility-3.4.3-r1.ebuild,v 1.9 2005/12/31 13:31:39 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/Attic/kdeaccessibility-3.4.3-r1.ebuild,v 1.10 2006/01/22 09:29:57 corsair Exp $
 
 inherit kde-dist eutils
 
 DESCRIPTION="KDE accessibility module"
-KEYWORDS="alpha amd64 hppa ~ia64 ppc ~ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ~ia64 ppc ppc64 sparc x86"
 IUSE="arts gstreamer"
 
 DEPEND="gstreamer? ( =media-libs/gstreamer-0.8*
