@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/Attic/kdebase-3.4.3-r1.ebuild,v 1.8 2005/12/31 12:37:15 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/Attic/kdebase-3.4.3-r1.ebuild,v 1.9 2006/01/22 09:26:42 corsair Exp $
 
 inherit kde-dist eutils
 
@@ -8,7 +8,7 @@ DESCRIPTION="KDE base packages: the desktop, panel, window manager, konqueror...
 
 SRC_URI="${SRC_URI} mirror://gentoo/kdebase-3.4.3-kubuntu-hal.patch.gz"
 
-KEYWORDS="alpha amd64 hppa ~ia64 ~mips ppc ~ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ~ia64 ~mips ppc ppc64 sparc x86"
 IUSE="arts cups java ldap ieee1394 hal lm_sensors logitech-mouse openexr opengl pam samba ssl"
 # hal: enables hal backend for 'media:' ioslave
 
