@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/Attic/ChangeLog,v 1.253 2006/01/14 08:59:45 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/Attic/ChangeLog,v 1.254 2006/01/22 09:26:42 corsair Exp $
+
+  22 Jan 2006; Markus Rothe <corsair@gentoo.org> kdebase-3.4.3-r1.ebuild:
+  Stable on ppc64
 
   14 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
   -files/kcheckpass-3.5.0-bindnow.patch, -files/kdesu-3.5.0-bindnow.patch,
