@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeaccessibility
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/Attic/ChangeLog,v 1.95 2005/12/31 13:31:39 corsair Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/Attic/ChangeLog,v 1.96 2006/01/22 09:29:57 corsair Exp $
+
+  22 Jan 2006; Markus Rothe <corsair@gentoo.org>
+  kdeaccessibility-3.4.3-r1.ebuild:
+  Stable on ppc64
 
   31 Dec 2005; Markus Rothe <corsair@gentoo.org>
   kdeaccessibility-3.4.3-r1.ebuild:
